✨ feat: implement transaction management with CashIn and Transfer transactions (Note: Not yet functional but can connect to DB)